force-app/main/default/objects/CommercientSF__ArInvoicePay__c/CommercientSF__ArInvoicePay__c.object-meta.xml
<CustomObject>
    <description>Syspro ArInvoicePay table.</description>
    <label>Syspro Invoice Payment</label>
    <nameField>
        <label>Syspro Invoice Payment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Invoice Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>