force-app/main/default/objects/CommercientSF__ArInvoicePay__c/fields/CommercientSF__AccountConvRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AccountConvRate__c</fullName>
    <label>Account conversion rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>