force-app/main/default/objects/CommercientSF__ArInvoicePay__c/fields/CommercientSF__AccountCur__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AccountCur__c</fullName>
    <label>Account currency code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>