force-app/main/default/objects/CommercientSF__ArInvoicePay__c/fields/CommercientSF__AccountMulDiv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AccountMulDiv__c</fullName>
    <label>Account multiply or divide</label>
    <length>255</length>
    <type>Text</type>
</CustomField>