force-app/main/default/objects/CommercientSF__ArInvoicePay__c/fields/CommercientSF__DiscValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscValue__c</fullName>
    <label>Discount given</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>