force-app/main/default/objects/CommercientSF__ArInvoicePay__c/fields/CommercientSF__EntryNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EntryNumber__c</fullName>
    <label>Entry number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>