force-app/main/default/objects/CommercientSF__ArInvoicePay__c/fields/CommercientSF__Journal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Journal__c</fullName>
    <label>Journal number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>