force-app/main/default/objects/CommercientSF__ArInvoicePay__c/fields/CommercientSF__JournalDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__JournalDate__c</fullName>
    <label>Journal date</label>
    <type>Date</type>
</CustomField>