force-app/main/default/objects/CommercientSF__ArInvoicePay__c/fields/CommercientSF__PostConvRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PostConvRate__c</fullName>
    <label>Conversion rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>