force-app/main/default/objects/CommercientSF__ArInvoicePay__c/fields/CommercientSF__PostMulDiv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PostMulDiv__c</fullName>
    <label>Multiply or divide</label>
    <length>255</length>
    <type>Text</type>
</CustomField>