force-app/main/default/objects/CommercientSF__ArInvoicePay__c/fields/CommercientSF__PostValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PostValue__c</fullName>
    <label>Currency value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>