force-app/main/default/objects/CommercientSF__ArInvoicePay__c/fields/CommercientSF__TrnType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrnType__c</fullName>
    <label>Transaction code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>