force-app/main/default/objects/CommercientSF__ArInvoicePay__c/fields/CommercientSF__TrnValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrnValue__c</fullName>
    <label>Transaction amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>